# photoneo_campx

./: .gitignore  README.md
docker/: Dockerfile  docker-compose.yml  pre_compose_setup.sh  start.sh
docker/api_server/: app.py
docker_old/: Dockerfile  docker-compose.yml  pre_compose_setup.sh
guac/docker/: Dockerfile  docker-compose.yml  start.sh
guac/photoneo_docker_all_in_one/docker/: Dockerfile  docker-compose.yml  start.sh
localization_interface/: Cargo.toml  package.xml
localization_interface/src/: main.rs
localization_interface_redis/: Cargo.toml
localization_interface_redis/cpp_executables/Localize/: CMakeLists.txt  Localize.cpp
localization_interface_redis/src/: main.rs
localization_interface_redis/src/core/: interface.rs  mod.rs  state.rs
localization_interface_redis/tests/: connect.rs
localization_interface_ros/: CMakeLists.txt
localization_interface_ros/cpp_executables/Localize/: Localize.cpp
localization_msgs/: CMakeLists.txt  package.xml
localization_msgs/srv/: Localize.srv
phoxi_control_interface/: CMakeLists.txt  Cargo.toml  package.xml
phoxi_control_interface/cpp_executables/Connect/: CMakeLists.txt
phoxi_control_interface/cpp_executables/Freerun/: CMakeLists.txt  Freerun.cpp
phoxi_control_interface/cpp_executables/Stop/: CMakeLists.txt
phoxi_control_interface/parameters/scanners/: photoneo_volvo.json
phoxi_control_interface/parameters/settings/: black_plate.json
phoxi_control_interface/src/: main.rs
phoxi_control_interface/tests/: capture.rs  connect.rs  freerun.rs  stop.rs
phoxi_control_interface_redis/: Cargo.toml
phoxi_control_interface_redis/cpp_executables/Capture/: Capture.cpp
phoxi_control_interface_redis/cpp_executables/CaptureNew/: CMakeLists.txt  CaptureNew.cpp
phoxi_control_interface_redis/cpp_executables/CaptureNewIPv4/: CMakeLists.txt  CaptureNewIPv4.cpp
phoxi_control_interface_redis/cpp_executables/ConnectIPv4/: CMakeLists.txt  ConnectIPv4.cpp
phoxi_control_interface_redis/docker/: Dockerfile
phoxi_control_interface_redis/parameters/scanners/: photoneo_1708011.json  photoneo_volvo.json
phoxi_control_interface_redis/parameters/settings/: big_plate.json  noise_filtering_for_shiny_material.json  strong_ambient_light.json
phoxi_control_interface_redis/src/: main.rs
phoxi_control_interface_redis/src/core/: interface.rs  mod.rs  state.rs  state_manager.rs
phoxi_control_interface_redis/tests/: capture.rs  freerun.rs  stop.rs
phoxi_control_interface_ros/: CMakeLists.txt  Cargo.toml  package.xml
phoxi_control_interface_ros/cpp_executables/Capture/: CMakeLists.txt
phoxi_control_interface_ros/cpp_executables/Connect/: Connect.cpp
phoxi_control_interface_ros/cpp_executables/ConnectIPv4/: ConnectIPv4.cpp
phoxi_control_interface_ros/cpp_executables/Stop/: Stop.cpp
phoxi_control_interface_ros/parameters/scanners/: photoneo_volvo.json
phoxi_control_interface_ros/parameters/settings/: default.json  fast_scanning.json
phoxi_control_interface_ros/tests/: connect.rs  freerun.rs  stop.rs
phoxi_control_msgs/: CMakeLists.txt  package.xml
phoxi_control_msgs/srv/: Scan.srv  ScanAdvanced.srv
