[package]
name = "phoxi_control_interface_redis"
version = "0.1.0"
authors = ["Endre Erős <endre.eros@chalmersindustriteknik.se>"]
edition = "2021"
autotests = false

[dependencies]
log = "0.4.22"
futures = "0.3.30"
redis = { version = "0.29.1", features = ["tokio-comp"] }
tokio = { version = "1.36.0", features = ["full"] }
micro_sp = {git = "https://github.com/endre90/micro_sp", tag = "v0.1.3"}
serde_json = "1.0.91"
serde = { version = "1.0.209", features = ["derive"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "connect"
path = "tests/connect.rs"

[[bin]]
name = "freerun"
path = "tests/freerun.rs"

[[bin]]
name = "stop"
path = "tests/stop.rs"

[[bin]]
name = "capture"
path = "tests/capture.rs"