[package]
name = "phoxi_control_interface_ros"
version = "0.1.0"
authors = ["Endre Erős <endre.eros@chalmersindustriteknik.se>"]
edition = "2021"
autotests = false

[profile.colcon]
inherits = "release"

[dependencies]
r2r = "0.8.4"
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "connect"
path = "tests/connect.rs"

[[bin]]
name = "freerun"
path = "tests/freerun.rs"

[[bin]]
name = "stop"
path = "tests/stop.rs"

[[bin]]
name = "capture"
path = "tests/capture.rs"